--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Yo Robot
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Somos Beñat y Juancarlos y vamos a hablar de robótica y de intelingencia artificial. Los de la la 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
