--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Yo Robot
 
 # Short bio or description (displayed in the header)
-description: Somos Beñat y Juancarlos y vamos a hablar de robótica y de intelingencia artificial. Los de la la 
+description: Somos Beñat y Juancarlos y vamos a hablar de robótica y de intelingencia artificial.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
